--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="path-to-the-file/splide.min.js"></script>
   </body>
 </html>
